# ToyPasses

./: CMakeLists.txt
PatternMatch/: CMakeLists.txt  ShowPatterns.cpp  reduce_pat.ll  run.sh
ShowLoops/: CMakeLists.txt  ShowLoops.cpp  cycle-is-here.ll  loop-is-here.bc  loop-is-here.ll  o.sh
